test/out.res
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 3: syntax error at or near TYPEID = A
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 8: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 11: syntax error at or near '*'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 14: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 17: syntax error at or near '@'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 20: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 23: syntax error at or near TYPEID = A
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 27: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 30: syntax error at or near '@'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 34: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 37: syntax error at or near '@'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 40: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 43: syntax error at or near '@'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 47: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 50: syntax error at or near '@'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 53: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 56: syntax error at or near '@'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 59: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 61: syntax error at or near '{'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 64: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 65: syntax error at or near '{'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 70: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 72: syntax error at or near '}'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 73: syntax error at or near '}'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 77: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 149: syntax error at or near '}'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 150: syntax error at or near '}'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 154: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 165: syntax error at or near TYPEID = A
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 180: syntax error at or near TYPEID = A
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 194: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 217: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 228: syntax error at or near TYPEID = A
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 233: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 241: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 246: syntax error at or near TYPEID = A
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 251: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 256: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 261: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 266: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 346: syntax error at or near OBJECTID = a
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 374: syntax error at or near '}'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 377: syntax error at or near '~'
"/afs/ir/users/v/e/veni/CS-143-Project-2/test/error_combo2.cl", line 390: syntax error at or near OBJECTID = a
Compilation halted due to lex and parse errors
